--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
+
+    <script>
+      $(function() {
+      var people = [];
+      $.getJSON('data.json', function(data) {
+      $.each(data.tasks, function(i, f) {
+      var task = '<li class="collection-item" style="position:' +
+      'relative"><span class="title">' + f.Title +
+      '</span><span class="title"' +  'style="position: absolute;' +
+      'right: 100px; top: 10px">' + f.Date + '</span><p>' +
+      f.Description +
+      '</p>' + '<a class="btn-floating btn-large waves-effect waves-light'
+      + 'red" style="position: absolute; right: 10px; top: 20px"><i class="material-icons">delete</i></a></li>'
+
+      $(task).appendTo(".collection");
+      });
+      });
+      });
+    </script>
   </head>
 
   <body>
@@ -42,22 +63,12 @@
         <h3 style="margin-bottom: 1em">Tasks</h3>
         
         <ul class="collection">
-
-          <li class="collection-item" style="position: relative">
-            <span class="title">Shop</span>
-            <p>Get stuff</p>
-            <a class="btn-floating btn-large waves-effect waves-light
-            red" style="position: absolute; right: 10px; top: 20px"><i class="material-icons">delete</i></a>
-          </li>
-
-          <li class="collection-item" style="position: relative">
-            <span class="title">And then</span>
-            <p>Return home</p>
-            <a class="btn-floating btn-large waves-effect waves-light
-            red" style="position: absolute; right: 10px; top: 20px"><i class="material-icons">delete</i></a>
-          </li>
-
+          
         </ul>
+    
+</div>
+</div>
+        
       </div>
     </div>
 
